--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "express-generator": "^4.16.1"
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "express-generator": "^4.16.1",
+    "prettier": "^1.18.2"
   }
 }
