add two routes for api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "vue"
+        "vue",
+        "prettier"
     ],
     "rules": {
+        "prettier/prettier":"error"
     }
 }
