--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,12 @@
         "browser": true,
         "es6": true
     },
+    "parser": "@typescript-eslint/parser",
     "extends": [
         "eslint:recommended",
-        "plugin:vue/essential"
+        "plugin:prettier/recommended",
+        "plugin:vue/essential",
+        "plugin:@typescript-eslint/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
