--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "expressExercise",
   "version": "1.0.0",
   "description": "Hola Nico, morirás de noche",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm run build-ts",
+    "start": "node .",
+    "build": "npx tsc",
     "dev": "nodemon server.js",
+    "dev:ts" : "ts-node ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "express-generator": "^4.16.1",
     "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "ts-node": "^8.3.0"
   }
 }
