--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expressExercise",
+  "name": "explosion",
   "version": "1.0.0",
   "description": "Hola Nico, morirás de noche",
   "main": "dist/server.js",
@@ -7,7 +7,7 @@
     "start": "node .",
     "build": "npx tsc",
     "dev": "nodemon server.js",
-    "dev:ts" : "ts-node ./src/server.ts",
+    "dev:ts": "ts-node ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
