--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "serve": "node .",
-    "build": "npm run clean && npx tsc",
+    "build": "npx tsc",
     "build:dev": "npm run clean && npx tsc",
     "clean": "rm -r ./dist/*",
     "dev:watch": "nodemon server.js",
