--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "dev:watch": "nodemon server.js",
     "dev:ts": "ts-node ./src/server.ts",
     "test": "jest",
-    "test:watch":"jest --watch"
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.2.7",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0"
   }
 }
