--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "explosion",
   "version": "1.0.0",
-  "description": "Hola Nico, morirás de noche",
+  "description": "Explosions API",
   "main": "dist/server.js",
   "scripts": {
     "serve": "node .",
@@ -30,9 +30,11 @@
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-jest": "^22.7.2",
     "eslint-plugin-prettier": "^3.1.0",
     "express-generator": "^4.16.1",
     "jest": "^24.8.0",
+    "jsdoc": "^3.6.2",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
