--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
+    "mongoose": "^5.6.4",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.15",
+    "@types/mongodb": "^3.1.28",
+    "@types/mongoose": "^5.5.7",
     "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
