--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ node_js:
   "node"
 
 script:
-  npm run build
+  - npm run build
+  - npm run test
+  - npm run test:coveralls
 before_deploy:
-  npm run test
+  npm run build:docs
 deploy:
   provider: pages
   skip_cleanup: true
-  local_dir: dist
+  local_dir: docs
   github_token: $GH_TOKEN 
   on:
     branch: master
