--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "serve": "node .",
     "build": "npx tsc",
+    "build:docs": "jsdoc -c jsdoc.config.json",
     "build:dev": "npm run clean && npx tsc",
-    "clean": "rm -r ./dist/*",
+    "clean": "rm -r ./dist",
+    "clean:docs": "rm -r ./docs",
+    "clean:all": "npm run clean; npm run clean:docs",
     "dev:watch": "nodemon server.js",
     "dev:ts": "ts-node ./src/server.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +35,8 @@
     "@types/node": "^12.0.12",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
+    "better-docs": "^1.1.6",
+    "coveralls": "^3.0.4",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-jest": "^22.7.2",
