--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "explosion",
   "version": "1.0.0",
   "description": "Explosions API",
+  "repository": "https://github.com/ArcaDelDelirio/explotionExpress",
   "main": "dist/server.js",
   "scripts": {
     "start": "node .",
+    "start:database": "mongod & sleep 5 && mongo mongo-init.js && npm run start",
     "build": "chmod +x build.sh; ./build.sh ;npm i ;npm run build:local",
     "build:local": "npx tsc",
     "build:docs": "jsdoc -c jsdoc.config.json",
