--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "dev:ts": "ts-node ./src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage --accountToken $ACCOUNT_TOKEN --username $USERNAME_CODACY --projectName explotionExpress"
+    "test:coverage": "jest --coverage",
+    "coverage:codacy": "cat ./coverage/lcov.info | codacy-coverage --token $PROJECT_TOKEN --username $USERNAME_CODACY --projectName explotionExpress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint-plugin-jest": "^22.7.2",
     "express": "^4.17.1",
+    "mongoose": "^5.6.4",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@typescript-eslint/parser": "^1.11.0",
     "codacy-coverage": "^3.4.0",
     "eslint": "^6.0.1",
+    "eslint-plugin-jest": "^22.7.2",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express-generator": "^4.16.1",
