--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "coverage:codacy": "npm run test:coverage | cat ./coverage/lcov.info | codacy-coverage --token $PROJECT_TOKEN --username $USERNAME_CODACY --projectName explotionExpress"
+    "coverage:codacy": "cat ./coverage/lcov.info | codacy-coverage --token $PROJECT_TOKEN --username $USERNAME_CODACY --projectName explotionExpress"
   },
   "keywords": [],
   "author": "",
