--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "es6": true,
         "jest": true
     },
@@ -20,9 +20,7 @@
         "SharedArrayBuffer": "readonly"
     },
     "plugins": [
-        "prettier"
     ],
     "rules": {
-        "prettier/prettier":"error"
     }
 }
