Changes typo? on build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ services:
 matrix:
   include:
     - language: bash  
-    - name: "Docker Build"    
+      name: "Docker Build"    
       before_script: docker build -t express:mongo .
       script: docker run -d -p 27017:27017 express:mongo
       after_success: curl 127.0.0.1:27017 
 
     - language: node_js
-    - name : "Documentation Deployment"
+      name : "Documentation Deployment"
       nodejs:
         - "10"
       script: 
@@ -31,7 +31,7 @@ matrix:
           branch: docs
 
     - language: node_js
-    - name: "Testing Server"
+      name: "Testing Server"
       nodejs:
           - "10"
       before_script: npm run build
