--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - language: bash  
       name: "Docker Build"    
       before_script: docker build -t express-mongo .
-      script: docker run -d -p 27017:27017 express:mongo
+      script: docker run -d -p 27017:27017 express-mongo
       after_success: 
         - docker ps  
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
