--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
           - "10"
       before_script: 
         - docker pull $DOCKER_USERNAME/express-mongo
-        - docker run -p 27017:27017 
+        - docker run -p 27017:27017 -d $DOCKER_USERNAME/express-mongo
       script:
         - npm run test
         - npm run test:coverage
